<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myFlat</string>
    <string name="title_activity_start">myFlat</string>
    <string name="title_activity_login">myFlat: Login</string>
    <string name="title_activity_register">myFlat: Register</string>
    <string name="title_activity_show_zaehler_electro">Anzeige Stromverbrauch</string>
    <string name="title_activity_show_zaehler_gas">Anzeige Gasverbrauch</string>
    <string name="title_activity_show_zaehler_water">Anzeige Wasserverbrauch</string>
    <string name="title_activity_detail_electro">Stromverbrauch</string>
    <string name="title_activity_detail_gas">Gasverbrauch</string>
    <string name="title_activity_settings">Kontoeinstellungen</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_detail_water">Wasserverbrauch</string>

    <!-- Strings for Actionbar und Menus-->
    <string name="action_settings">Einstellungen</string>
    <string name="actions_logout">Abmelden</string>
    <string name="context_login">Registrieren</string>
    <string name="context_register">Anmelden</string>
    <string name="context_dashboard_gas">Gasverbrauch</string>
    <string name="context_dashboard_electric">Stromverbrauch</string>
    <string name="context_dashboard_water">Wasserverbrauch</string>
    <string name="context_account">Dashboard</string>
    <string name="show_list">Liste anzeigen</string>
    
    <!-- String for Start Screen -->
    <string name="start_wait">Bitte warten</string>
    
    <!-- Strings for Login Form -->
    <string name="login_logo">my flat hilft dir beim Verwalten deiner Wohnung</string>
    <string name="login_login">Anmelden</string>
    <string name="login_register_question">Sie haben noch keinen Account?</string>
    <string name="login_register_solution">Jetzt registrieren!</string>
    <string name="login_mail">Email-Adresse</string>
    <string name="login_pass">Passwort</string>

    <!-- Strings for Register Form -->
    <string name="register_register">Account erstellen</string>
    <string name="register_back_question">Sie haben bereits einen Account?</string>
    <string name="register_back_solution">Hier anmelden!</string>
    <string name="register_firstname">Vorname</string>
    <string name="register_lastname">Nachname</string>
    <string name="register_mail">Email-Adresse</string>
    <string name="register_pass">Passwort</string>

    <!-- Strings for Detail-Site -->
    <string name="listrow_datum">Datum</string>
    <string name="listrow_stand">Zählerstand</string>

    <!-- Strings for Detail-Site -->
    <string name="detail_water_headline">Wasserverbrauch</string>
    <string name="detail_electro_headline">Stromverbrauch</string>
    <string name="detail_gas_headline">Gasverbrauch</string>
    <string name="detail_water_logo">Zählerstände für Wasserverbrauch</string>
    <string name="detail_electro_logo">Zählerstände für Stromverbrauch</string>
    <string name="detail_gas_logo">Zählerstände für Gasverbrauch</string>
    <string name="detail_water_erfassen">Zählerstand Wasser erfassen</string>
    <string name="detail_electro_erfassen">Zählerstand für Strom erfassen</string>
    <string name="detail_gas_erfassen">Zählerstand für Gas erfassen</string>
    <string name="detail_date">Datum eingeben</string>
    <string name="detail_stand">Zählerstand eingeben</string>
    <string name="detail_button_submit">Speichern</string>
    <string name="detail_water_bisher">Bisherige Zählerstände</string>
    <string name="detail_electro_bisher">Bisherige Zählerstände</string>
    <string name="detail_gas_bisher">Bisherige Zählerstände</string>
    <string name="detail_update">Zählerstände anzeigen</string>

    <!-- Strings for Dashboard -->
    <string name="dashboard_gas">Gasverbrauch</string>
    <string name="dashboard_energy">Stromverbrauch</string>
    <string name="dashboard_water">Wasserverbrauch</string>
    <string name="dashboard_logout">Abmelden</string>
    <string name="dashboard_settings">Einstellungen</string>

    <!-- String für Kontoeinstellungen -->
    <string name="account_title">Hier können Sie Ihre persönlichen Daten ändern, indem Sie die vorbelegten Werte einfach überschreiben.</string>
    <string name="account_firstname">Vorname</string>
    <string name="account_lastname">Nachname</string>
    <string name="account_mail">Email-Adresse</string>
    <string name="account_pass">Passwort</string>
    <string name="account_action">Ändern</string>
    <string name="account_back">Zurück</string>

    <!-- Feedback -->
    <string name="login_error">Login fehlgeschlagen</string>
    <string name="registration_confirm">Konto erfolgreich erstellt</string>
    <string name="registration_error">Konto konnte nicht erstellt werden</string>
    <string name="account_update_confirm">Konto erfolgreich aktualisiert</string>
    <string name="account_update_error">Konto konnte nicht aktualisiert werden</string>

</resources>