<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/context_dashboard_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/context_dashboard_logout"
        android:icon="@drawable/logout"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/actions_logout"/>
    
    <item
        android:id="@+id/context_dashboard_gas"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/context_dashboard_gas"/>
    
    <item
        android:id="@+id/context_dashboard_electric"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/context_dashboard_electric"/>
    
    <item
        android:id="@+id/context_dashboard_water"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/context_dashboard_water"/>
    

</menu>