<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d35f55"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailGas" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/detail_gas_logo"
            android:src="@drawable/fire" />

        <TextView
            android:id="@+id/detail_gas_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/detail_gas_headline"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:background="@drawable/layout_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detail_gas_erfassen"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/detail_gas_erfassen"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/detail_date"
            android:linksClickable="true"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:textSize="18sp"
            android:typeface="monospace"
            android:textIsSelectable="true"
            android:inputType="date" />

        <EditText
            android:id="@+id/detail_stand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/detail_stand"
            android:inputType="numberDecimal"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:onClick="saveZaehlerWater"
            android:text="@string/detail_button_submit" />

        <EditText
            android:id="@+id/BORDER2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@drawable/border"
			android:clickable="false" 
        	android:cursorVisible="false" 
        	android:focusable="false" 
        	android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/detail_gas_bisher"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/detail_electro_bisher"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/detail_gas_update"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/detail_update" />
    </LinearLayout>
    
</RelativeLayout>