<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d35f55"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Detail" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/detail_water_logo"
            android:src="@drawable/drop" />

        <TextView
            android:id="@+id/detail_water_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:text="@string/detail_water_headline"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/BORDER"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@drawable/border" />

        <TextView
            android:id="@+id/detail_water_erfassen"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/detail_water_erfassen"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/detail_date"
            android:inputType="date"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/detail_stand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/detail_stand"
            android:inputType="number"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:typeface="monospace" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="saveZaehlerWater"
            android:text="@string/detail_button_submit" />

        <EditText
            android:id="@+id/BORDER2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@drawable/border" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/detail_water_bisher"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:text="@string/detail_water_bisher"
            android:textColor="#ffffff" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
        </ListView>

    </LinearLayout>

    <Button
        android:id="@+id/detail_water_update"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_alignTop="@+id/linearLayout3"
        android:text="@string/detail_update" />

</RelativeLayout>