<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#d35f55"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fire" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dashboard_gas"
            android:textColor="#ffffff"
		    android:gravity="center|left"
		    android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
	<EditText
	    android:id="@+id/edittext"
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:layout_margin="10dp"
	    android:background="@drawable/border" />
	
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/energy" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dashboard_energy"
            android:textColor="#ffffff"
		    android:gravity="center|left"
		    android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
	<EditText
	    android:id="@+id/edittext"
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:layout_margin="10dp"
	    android:background="@drawable/border" />
	
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/drop" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dashboard_water"
            android:textColor="#ffffff"
		    android:gravity="center|left"
		    android:layout_marginLeft="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    

</LinearLayout>
</RelativeLayout>